tslox/src/ast/lox-grammar.bnf
program                 ::= declaration* EOF ;

declaration             ::= variableDeclaration
                          | statement ;

variableDeclaration     ::= "var" IDENTIFIER ( "=" expression )? ";" ;

statement               ::= expressionStatement
                          | printStatement
                          | block ;

expressionStatement     ::= expression
printStatement          ::= "print" expression ";" ;
block                   ::= "{" declaration "}" ;

expression              ::= assignment ;
assignment              ::= IDENTIFIER "=" assignment
                          | equality ;

equality                ::= comparison ( ( "!=" | "==" ) comparison )* ;
comparison              ::= term ( ( ">" | ">=" | "<" | "<=" ) term )* ;
term                    ::= factor ( ( "-" | "+" ) factor )* ;
factor                  ::= unary ( ( "/" | "*" ) unary )* ;
unary                   ::= ( "-" | "!" ) unary
                          | primary ;
primary                 ::= NUMBER | STRING
                          | "true" | "false" | "nil"
                          | "(" expression ")"
                          | IDENTIFIER ;
